--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
-    "styled-components": "5.3.0"
+    "resize-img": "^2.0.0",
+    "styled-components": "5.3.0",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
@@ -48,7 +51,7 @@
     "@typescript-eslint/parser": "4.27.0",
     "babel-loader": "8.2.2",
     "cross-env": "7.0.3",
-    "electron": "13.1.2",
+    "electron": "21.2.0",
     "eslint": "7.29.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-standard": "16.0.3",
