--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "license": "MIT",
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.1",
+    "@types/file-saver": "^2.0.5",
+    "file-saver": "^2.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
+    "react-image-file-resizer": "^0.4.8",
     "resize-img": "^2.0.0",
     "styled-components": "5.3.0",
     "toastify-js": "^1.12.0"
